# Animesh

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.json  components.json  docker-compose.yml  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.test.ts  bump-version.ts  check-application-params.test.ts  check-application-params.ts  check-error-handling.test.ts  check-error-handling.ts  check-function-length.test.ts  check-function-length.ts  check-interface-methods.test.ts  check-interface-methods.ts  check-presentation-styles.test.ts  check-presentation-styles.ts  check-presentation-tauri-imports.test.ts  check-presentation-tauri-imports.ts  tsconfig.json
src/: App.css  App.test.tsx  App.tsx  main.tsx  routes.tsx  types.ts  utils.test.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: crawler.rs  crawler_client.rs  lib.rs  subtitles.rs  torrent.rs  torrent_manager.rs
src-tauri/core/src/domain/: crawler.rs  mod.rs  subtitles.rs  torrent.rs
src-tauri/core/src/infrastructure/: http_client.rs  http_crawler.rs  matroska_subtitles.rs  mod.rs  rqbit_torrent.rs
src-tauri/icons/: icon.icns
src-tauri/server/: Cargo.toml
src-tauri/server/src/: main.rs
src-tauri/src/: lib.rs  main.rs
src/application/bangumi/: GetBangumiCalendarUseCase.test.ts  GetBangumiCalendarUseCase.ts  GetBangumiCharactersUseCase.ts  GetBangumiEpisodesUseCase.ts  GetBangumiPersonsUseCase.ts  GetBangumiSubjectUseCase.ts
src/application/collection/: AddFavoriteUseCase.ts  CollectionUseCase.test.ts  GetCollectionsUseCase.ts  GetFavoriteStatusUseCase.ts  RemoveFavoriteUseCase.ts
src/application/notification/: NotifyDownloadCompletionUseCase.test.ts  NotifyDownloadCompletionUseCase.ts
src/application/opener/: OpenUrlUseCase.test.ts  OpenUrlUseCase.ts
src/application/settings/: AutoUpdateTrackersUseCase.test.ts  AutoUpdateTrackersUseCase.ts  GetDefaultTrackersUseCase.ts  GetSettingsUseCase.ts  SaveSettingsUseCase.ts  SelectDirectoryUseCase.ts  SetThemeUseCase.ts  SettingsUseCase.test.ts  SyncTrackersUseCase.ts  VerifyAiConnectionUseCase.test.ts  VerifyAiConnectionUseCase.ts
src/application/torrent/: AddTorrentMagnetUseCase.ts  DeleteTorrentUseCase.ts  GetSubtitleTracksUseCase.ts  GetSubtitleVttUseCase.ts  GetTorrentFilesUseCase.ts  GetTorrentStatusUseCase.ts  GetTorrentStreamUrlUseCase.ts  ListTorrentsUseCase.ts  PauseTorrentUseCase.ts  ResolveTorrentUseCase.ts  ResumeTorrentUseCase.ts  SearchTorrentsUseCase.ts  SearchTorrentsWithAiUseCase.test.ts  SearchTorrentsWithAiUseCase.ts  SubscribeTorrentsUseCase.ts  TorrentUseCase.test.ts
src/application/update/: CheckUpdateUseCase.test.ts  CheckUpdateUseCase.ts  GetCurrentVersionUseCase.test.ts  GetCurrentVersionUseCase.ts  OpenUpdateUrlUseCase.test.ts  OpenUpdateUrlUseCase.ts
src/components/: AppComponents.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Layout.test.tsx  Layout.tsx  WeeklyCalendar.tsx
src/context/: AppContext.tsx
src/crosscutting/: PathUtils.ts
src/crosscutting/context/: context.test.ts  context.ts
src/di/: DIContext.tsx  repositories.ts  repositories.web.ts
src/domain/ai/: AiClient.ts
src/domain/bangumi/: BangumiCache.ts  BangumiRepository.ts  BangumiSchemas.test.ts  BangumiSchemas.ts
src/domain/collection/: CollectionRepository.ts  CollectionSchemas.test.ts  CollectionSchemas.ts
src/domain/logger/: logger.ts
src/domain/notification/: NotificationRepository.ts
src/domain/opener/: OpenerRepository.ts
src/domain/settings/: SettingsRepository.ts  SettingsSchemas.ts  TrackerSettings.test.ts  TrackerSettings.ts
src/domain/torrent/: TorrentRepository.ts  TorrentSchemas.ts
src/domain/update/: UpdateInfo.ts  UpdateRepository.ts  UpdateSchemas.ts  VersionComparer.test.ts  VersionComparer.ts
src/hooks/: useRequestContext.test.ts  useRequestContext.ts
src/infrastructure/ai/: FetchAiClient.ts  TauriAiClient.ts
src/infrastructure/bangumi/: BrowserBangumiCache.test.ts  BrowserBangumiCache.ts  HttpBangumiRepository.test.ts  HttpBangumiRepository.ts
src/infrastructure/collection/: LocalStorageCollectionRepository.test.ts  LocalStorageCollectionRepository.ts
src/infrastructure/http/: HttpClient.test.ts  HttpClient.ts
src/infrastructure/logger/: ConsoleLogger.ts
src/infrastructure/notification/: TauriNotificationRepository.ts  WebNotificationRepository.ts
src/infrastructure/opener/: TauriOpenerRepository.test.ts  TauriOpenerRepository.ts  WebOpenerRepository.ts
src/pages/: Calendar.test.tsx  Calendar.tsx  Downloads.test.tsx  Downloads.tsx  Home.test.tsx  Home.tsx  Player.test.tsx  Player.tsx  Settings.test.tsx  Settings.tsx  SubjectDetail.test.tsx  SubjectDetail.tsx  TorrentDetail.test.tsx  TorrentDetail.tsx
src/presentation/: App.css  App.test.tsx  App.tsx  routes.test.tsx  routes.tsx
src/shared/: PathUtils.test.ts
src/test/: setup.ts  test-utils.ts
(+58 files in other folders)
