[workspace]
members = [
    ".",
    "core"
]

[package]
name = "animesh"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "animesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde_json = "1"
animesh_core = { path = "core" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
aws-lc-sys = { version = "0.42.0", features = ["prebuilt-nasm"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
