[package]
name = "animesh_core"
version = "0.3.5"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls", "http-api-client"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
matroska-demuxer = "0.7.0"
log = "0.4"
async-trait = "0.1"
local-ip-address = "0.6.13"
tower-http = { version = "0.7.0", features = ["cors"] }

[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
aws-lc-sys = { version = "0.42.0", features = ["prebuilt-nasm"] }

[target.'cfg(all(target_os = "android", not(target_arch = "aarch64")))'.dependencies]
aws-lc-sys = { version = "0.42.0", features = ["prebuilt-nasm", "bindgen"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
aws-lc-sys = { version = "0.42.0", features = ["prebuilt-nasm"] }
